Started to gather a script to create tailored notebooks.
- need to move config data into separate files
- images seem not to appear in resulting html files

[#40835925]

--- a/doc/tailored_tutorials/partners/create-tailored-manual.ipynb
+++ b/doc/tailored_tutorials/partners/create-tailored-manual.ipynb
@@ -14,7 +14,8 @@
       "tutorials = ['tutorial-example2','tutorial-saving-averages-demo','tutorial-use-of-logging']\n",
       "conf = {'nameshort':'Hesjedahl',\n",
       "        'names': ('Thorsten Hesjedahl','Shilei Zhang'),\n",
-      "        'header':\".. contents::\\n\\n\"}\n",
+      "        'header':\".. contents::\\n\\n\",\n",
+      "        'ipynbdir':\"The raw ipython notebooks are `available here <ipynb>`__.\\n\\n\" }\n",
       "import tempfile\n",
       "import shutil\n",
       "import os.path\n",
@@ -23,15 +24,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def assemble_rst(rstrootfilenames):\n",
-      "    # create temparory directory to work in\n",
-      "    \n",
+      "def targetdirectoryname(conf):\n",
       "    use_build = True\n",
       "    if use_build == False:\n",
       "        tmpdirname = tempfile.mkdtemp()\n",
@@ -39,21 +38,35 @@
       "        tmpdirname = '_build'\n",
       "        if not os.path.exists(tmpdirname):   # if we don't use\n",
       "            os.mkdir(tmpdirname)\n",
-      "    \n",
       "    targetdirname = os.path.join(tmpdirname, 'finmag-tutorial-%s' % conf['nameshort'])\n",
+      "\n",
       "    if os.path.exists(targetdirname):\n",
       "            assert use_build == True # otherwise this should be impossible\n",
       "    else:\n",
       "        os.mkdir(targetdirname)\n",
+      "\n",
+      "    return targetdirname\n",
+      "\n",
+      "def assemble_rst(rstrootfilenames):\n",
+      "\n",
+      "    targetdirname = targetdirectoryname(conf) \n",
+      "        \n",
       "    \n",
-      "    print(\"tmpdirname = %s\" % tmpdirname)\n",
-      "    # copy all rst files (and where we have images also the corresponding _files directories)\n",
-      "    # to the target location\n",
       "    for fileroot in rstrootfilenames:\n",
+      "        # copy all rst files (and where we have images also the corresponding _files directories)\n",
+      "        # to the target location  \n",
       "        shutil.copy(\"../../ipython_notebooks_dest/%s.rst\" % fileroot, os.path.join(targetdirname,fileroot+\".rst\"))\n",
       "        if os.path.exists(\"../../%s_files\" % fileroot):\n",
       "            targetdirnamefiles = os.path.join(targetdirname,fileroot+\"_files\")\n",
       "            shutil.copytree(\"../../ipython_notebooks_dest/%s_files\" % fileroot, targetdirnamefiles)\n",
+      "            \n",
+      "            \n",
+      "        # also copy the raw ipynb files into the right directory\n",
+      "        ipynbdir = os.path.join(targetdirname, 'ipynb')\n",
+      "        if not os.path.exists(ipynbdir):\n",
+      "            os.mkdir(ipynbdir)\n",
+      "        shutil.copy(\"../../ipython_notebooks_src/%s.ipynb\" % fileroot, ipynbdir)\n",
+      "        \n",
       "    \n",
       "    # Create index file\n",
       "    fout = open(os.path.join(targetdirname,'index.rst'),'w')\n",
@@ -65,6 +78,8 @@
       "    fout.write(\"Tutorial compiled at %s.\\n\\n\" % time.asctime())\n",
       "    \n",
       "    fout.write(conf['header'])\n",
+      "    \n",
+      "    fout.write(conf['ipynbdir'])\n",
       "  \n",
       "   \n",
       "    # Assemble the index file\n",
@@ -80,32 +95,49 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "tmpdirname = _build\n"
-       ]
-      }
-     ],
-     "prompt_number": 43
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "shutil.copytree("
+      "def compile_rst2html():\n",
+      "    import subprocess\n",
+      "    targetdirname = targetdirectoryname(conf) \n",
+      "    #output = os.system(\")\n",
+      "    cmd = \"cd %s; rst2html.py index.rst index.html\" % targetdirname\n",
+      "    output = subprocess.check_output(cmd, shell=True)\n",
+      "    print (\"Output = %s\" % output)"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "compile_rst2html()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Output = \n"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
