Updated example a little.

--- a/doc/ipython_notebooks_src/tutorial-example2.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-example2.ipynb
@@ -36,7 +36,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -62,7 +62,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -220,48 +220,54 @@
      "collapsed": false,
      "input": [
       "\n",
+      "\n",
       "import os\n",
       "import logging\n",
       "import numpy as np\n",
-      "#import dolfin as df\n",
-      "#import progressbar as pb\n",
       "import finmag\n",
-      "#from finmag.energies import Exchange, Demag\n",
+      "from finmag.energies import Exchange, Demag\n",
       "#from finmag.util.meshes import from_geofile, mesh_volume\n",
       "\n",
-      "sim = finmag.sim_with(mesh, Ms=0.86e6, alpha=0.5, unit_length=1e-9, A=13e-12, m_init=(1, 0, 1))\n",
+      "sim = finmag.sim_with(mesh, name='bar', Ms=0.86e6, alpha=0.5, unit_length=1e-9, A=13e-12, m_init=(1, 0, 1))\n",
       "\n",
       "fh = open(os.path.join(\"averages.txt\"), \"w\")\n",
       "fe = open(os.path.join(\"energies.txt\"), \"w\")\n",
       "\n",
-      "#times = np.linspace(0, 3.0e-10, 60 + 1)\n",
-      "times = np.linspace(0, 3.0e-11, 6 + 1)\n",
+      "times = np.linspace(0, 1.0e-10, 20 + 1)\n",
+      "#times = np.linspace(0, 3.0e-11, 6 + 1)\n",
       "for counter, t in enumerate(times):\n",
       "        print(\"In iteration {} at time {}\".format(counter,t))\n",
-      "        # Integrate\n",
+      " \n",
+      "        # Integrate, i.e. do time integration here\n",
       "        sim.run_until(t)\n",
       "\n",
-      "        # Save averages to file\n",
+      "        # Save averages to file \n",
+      "        # (is done automatically for time, mx, my, mz, but not for energies and other fields at the moment)\n",
       "        mx, my, mz = sim.llg.m_average\n",
       "        fh.write(str(t) + \" \" + str(mx) + \" \" + str(my) + \" \" + str(mz) + \"\\n\")\n",
       "\n",
+      "        # get a handle on the exchange and demag energy interaciton objects\n",
+      "        exchange = sim.get_interaction('exchange')\n",
+      "        demag = sim.get_interaction('demag')\n",
+      "        \n",
       "        # Energies\n",
-      "        #E_e = exchange.compute_energy()\n",
-      "        #E_d = demag.compute_energy()\n",
-      "        #fe.write(str(E_e) + \" \" + str(E_d) + \"\\n\")\n",
+      "        E_e = exchange.compute_energy()\n",
+      "        E_d = demag.compute_energy()\n",
+      "        fe.write(str(t) + \" \" + str(E_e) + \" \" + str(E_d) + \"\\n\")\n",
       "\n",
       "        # Energy densities\n",
-      "        #if counter == 10:\n",
-      "            #exch_energy = exchange.energy_density_function()\n",
-      "            #demag_energy = demag.demag.energy_density_function()\n",
-      "            #finmag_exch, finmag_demag = [], []\n",
-      "            #R = range(100)\n",
-      "            #for i in R:\n",
-      "            #    finmag_exch.append(exch_energy([15, 15, i]))\n",
-      "            #    finmag_demag.append(demag_energy([15, 15, i]))\n",
+      "        if counter == 10:\n",
+      "            \n",
+      "            exch_energy = exchange.energy_density_function()\n",
+      "            demag_energy = demag.demag.energy_density_function()\n",
+      "            finmag_exch, finmag_demag = [], []\n",
+      "            R = range(100)\n",
+      "            for i in R:\n",
+      "                finmag_exch.append(exch_energy([15, 15, i]))\n",
+      "                finmag_demag.append(demag_energy([15, 15, i]))\n",
       "            # Store data\n",
-      "            #np.save(os.path.join(\"finmag_exch_density.npy\"), np.array(finmag_exch))\n",
-      "            #np.save(os.path.join(\"finmag_demag_density.npy\"), np.array(finmag_demag))\n",
+      "            np.save(os.path.join(\"finmag_exch_density.npy\"), np.array(finmag_exch))\n",
+      "            np.save(os.path.join(\"finmag_demag_density.npy\"), np.array(finmag_demag))\n",
       "\n",
       "fh.close()\n",
       "fe.close()\n",
@@ -394,7 +400,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "am"
+      "data = np.loadtxt('energies.txt')\n",
+      "time = data[:,0]\n",
+      "ex = data[:,1]\n",
+      "demag = data[:,2]\n",
+      "pylab.plot(time, ex, 'o-', label='exchange')\n",
+      "pylab.plot(time, demag, 'x-',label='demag')\n",
+      "pylab.xlabel('time [s]')\n",
+      "pylab.ylabel('Energy densities [J/m^3]')\n",
+      "pylab.legend()"
      ],
      "language": "python",
      "metadata": {},
