Improvements to ipython tutorials.
We should go through these and make sure we have one per feature. Will tidy this up a bit later, when we have a good selection of features to do thi systematically.

--- a/doc/ipython_notebooks_src/tutorial-example2.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-example2.ipynb
@@ -151,7 +151,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To proceed with the micromagnetic simulation, we need to create a simulation object. This needs to be given the mesh, the saturation magnetisation of the system (here a constant $M_s = 0.86\\cdot 10^6\\,\\mathrm{A/m}$, and a number ``unit_length`` which defines what the spacing of 1.0 in the mesh corresponds to in reality (we choose nanometres here). It also needs to be given the exchange coupling strength ``A`` and damping factor ``alpha``. We use the convenient function ``sim_with`` to create such a simulation object. Further explanations are embedded as comments in this code example:"
+      "To proceed with the micromagnetic simulation, we need to create a simulation object. This needs to be given the mesh, the saturation magnetisation of the system (here a constant $M_s = 0.86\\cdot 10^6\\,\\mathrm{A/m}$, and a number ``unit_length`` which defines what the spacing of 1.0 in the mesh corresponds to in reality (we choose nanometres here). It also needs to be given the exchange coupling strength ``A`` (in Joule/m) and damping factor ``alpha``. We use the convenient function ``sim_with`` to create such a simulation object. Further explanations are embedded as comments in this code example:"
      ]
     },
     {
