Fix typo in tutorial.

--- a/doc/ipython_notebooks_src/tutorial-using-ipython-notebook.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-using-ipython-notebook.ipynb
@@ -45,7 +45,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Almost certainly you will be missing some functionality. We encourage you to get in touch and tell us what feature you like to see, or what you try to achieve. For some of these requests, we may have working code that is no documented. Others may be easy to provide, and we will try to do so. For some, there is no quick fix of course, but it is worth reporting your requirements in any case. If in doubt, get in touch with Hans <fangohr@soton.ac.uk>."
+      "Almost certainly you will be missing some functionality. We encourage you to get in touch and tell us what feature you like to see, or what you try to achieve. For some of these requests, we may have working code that is not documented. Others may be easy to provide, and we will try to do so. For some, there is no quick fix of course, but it is worth reporting your requirements in any case. If in doubt, get in touch with Hans <fangohr@soton.ac.uk>."
      ]
     }
    ],
