Typo in cvode notebook title.

--- a/doc/ipython_notebooks_src/dev-cvode.ipynb
+++ b/doc/ipython_notebooks_src/dev-cvode.ipynb
@@ -11,7 +11,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## About the cvoode time integration -- developers notes"
+      "## About the cvode time integration -- developers notes"
      ]
     },
     {
