Minor clarification in cvode explanations.

--- a/doc/ipython_notebooks_src/dev-cvode.ipynb
+++ b/doc/ipython_notebooks_src/dev-cvode.ipynb
@@ -157,7 +157,7 @@
       "Things to observe:\n",
       "\n",
       "* t is the value up to which we want to integrate (for every row) and\n",
-      "* yout is the best approximation of the solution that CVODE can give us\n",
+      "* yout is the best approximation of the solution that CVODE can give us (for the time t which we requested)\n",
       "* current_time is the *internal* time t up to which the integration has been carried out. \n",
       "* num_steps in the number of integration steps that have been done\n",
       "* cur_step is the current step size (i.e. dt in this example) that will be attempted for the next step.\n",
