--- a/doc/ipython_notebooks_src/dev-cvode.ipynb
+++ b/doc/ipython_notebooks_src/dev-cvode.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "cvode"
+  "name": "dev-cvode"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -49,67 +49,88 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:11:41] INFO: Finmag logging output will be appended to file: '/home/fangohr/.finmag/global.log'\n"
+        "[2012-12-16 10:40:24] INFO: Finmag logging output will be appended to file: '/home/fangohr/.finmag/global.log'\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:11:41] DEBUG: Building modules in 'native'...\n"
+        "[2012-12-16 10:40:24] DEBUG: Building modules in 'native'...\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:               Finmag: 2426:d493ef6fdae46fb37c405343f69f3b8997f40213\n"
+        "[2012-12-16 10:40:25] DEBUG:               Finmag: 2489:51857a091b9eceefbdfe1411a280add604cdcdac\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:               Dolfin: 1.0.0\n"
+        "[2012-12-16 10:40:25] DEBUG:               Dolfin: 1.0.0\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:           Matplotlib: 1.2.0\n"
+        "[2012-12-16 10:40:25] DEBUG:           Matplotlib: 1.1.1\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:                Numpy: 1.6.1\n"
+        "[2012-12-16 10:40:25] DEBUG:                Numpy: 1.6.2\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:                Scipy: 0.9.0\n"
+        "[2012-12-16 10:40:25] DEBUG:                Scipy: 0.10.1\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:              IPython: 0.13.1\n"
+        "[2012-12-16 10:40:25] DEBUG:              IPython: 0.13.1\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "[2012-12-12 17:12:02] DEBUG:                Linux: Ubuntu 12.04.1 LTS\n"
+        "[2012-12-16 10:40:25] DEBUG:               Python: 2.7.3\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-16 10:40:25] DEBUG:             Sundials: 2.5.0-1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-16 10:40:25] DEBUG:         Boost-Python: 1.49.0\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-16 10:40:25] DEBUG:                Linux: Ubuntu 12.10\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -122,11 +143,14 @@
       "for i, t in enumerate(ts):\n",
       "    retval = integrator.advance_time(t, yout)\n",
       "    assert retval == 0.0\n",
-      "    print(\"t={:6.4}, yout = {:14}\".format(t,yout)),\n",
-      "    print(\"current_time = {:15.10}\".format(integrator.get_current_time())),\n",
+      "    print(\"t={:6.4}, yout = {:14}, yexact={:14}, \".format(t,yout,np.exp(0.5*t))),\n",
+      "    print(\"current_time = {:9.6g}\".format(integrator.get_current_time())),\n",
       "    print(\"num_steps = {:6}\".format(integrator.get_num_steps())),\n",
-      "    print(\"cur_step = {:6}\".format(integrator.get_current_step())),\n",
-      "    print(\"rhsevals = {:6}\".format(integrator.get_num_rhs_evals()))"
+      "    print(\"cur_step = {:6.4g}\".format(integrator.get_current_step())),\n",
+      "    print(\"rhsevals = {:6}\".format(integrator.get_num_rhs_evals()))\n",
+      "    absdiff = abs(yout - math.exp(0.5*t)),\n",
+      "    #print(\"absdiff= {:.5g}\".format(float(absdiff[0])))\n",
+      "    assert absdiff[0] < 2e-9, \"absdiff=%g\" % absdiff"
      ],
      "language": "python",
      "metadata": {},
@@ -135,20 +159,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "t=  0.01, yout = [ 1.00501252]  current_time =   0.01362599042 num_steps =      7 cur_step = 0.0192238139121 rhsevals =     19\n",
-        "t=  0.02, yout = [ 1.01005017]  current_time =   0.03284980433 num_steps =      8 cur_step = 0.0192238139121 rhsevals =     20\n",
-        "t=  0.03, yout = [ 1.01511307]  current_time =   0.03284980433 num_steps =      8 cur_step = 0.0192238139121 rhsevals =     20\n",
-        "t=  0.04, yout = [ 1.02020134]  current_time =   0.05207361824 num_steps =      9 cur_step = 0.0507205360613 rhsevals =     22\n",
-        "t=  0.05, yout = [ 1.02531512]  current_time =   0.05207361824 num_steps =      9 cur_step = 0.0507205360613 rhsevals =     22\n",
-        "t=  0.06, yout = [ 1.03045454]  current_time =   0.07952981349 num_steps =     10 cur_step = 0.0274561952488 rhsevals =     26\n",
-        "t=  0.07, yout = [ 1.03561971]  current_time =   0.07952981349 num_steps =     10 cur_step = 0.0274561952488 rhsevals =     26\n",
-        "t=  0.08, yout = [ 1.04081078]  current_time =    0.1069860087 num_steps =     11 cur_step = 0.0505824642197 rhsevals =     27\n",
-        "t=  0.09, yout = [ 1.04602786]  current_time =    0.1069860087 num_steps =     11 cur_step = 0.0505824642197 rhsevals =     27\n",
-        "t=   0.1, yout = [ 1.0512711]   current_time =    0.1069860087 num_steps =     11 cur_step = 0.0505824642197 rhsevals =     27\n"
+        "t=  0.01, yout = [ 1.00501252] , yexact= 1.00501252086,  current_time =  0.013626 num_steps =      7 cur_step = 0.01922 rhsevals =     19\n",
+        "t=  0.02, yout = [ 1.01005017] , yexact= 1.01005016708,  current_time = 0.0328498 num_steps =      8 cur_step = 0.01922 rhsevals =     20\n",
+        "t=  0.03, yout = [ 1.01511307] , yexact= 1.01511306462,  current_time = 0.0328498 num_steps =      8 cur_step = 0.01922 rhsevals =     20\n",
+        "t=  0.04, yout = [ 1.02020134] , yexact= 1.02020134003,  current_time = 0.0520736 num_steps =      9 cur_step = 0.05072 rhsevals =     22\n",
+        "t=  0.05, yout = [ 1.02531512] , yexact= 1.02531512052,  current_time = 0.0520736 num_steps =      9 cur_step = 0.05072 rhsevals =     22\n",
+        "t=  0.06, yout = [ 1.03045454] , yexact= 1.03045453395,  current_time = 0.0795298 num_steps =     10 cur_step = 0.02746 rhsevals =     26\n",
+        "t=  0.07, yout = [ 1.03561971] , yexact=  1.0356197088,  current_time = 0.0795298 num_steps =     10 cur_step = 0.02746 rhsevals =     26\n",
+        "t=  0.08, yout = [ 1.04081078] , yexact= 1.04081077419,  current_time =  0.106986 num_steps =     11 cur_step = 0.05058 rhsevals =     27\n",
+        "t=  0.09, yout = [ 1.04602786] , yexact= 1.04602785991,  current_time =  0.106986 num_steps =     11 cur_step = 0.05058 rhsevals =     27\n",
+        "t=   0.1, yout = [ 1.0512711]  , yexact= 1.05127109638,  current_time =  0.106986 num_steps =     11 cur_step = 0.05058 rhsevals =     27\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
