minor improvements in doc strings.

--- a/doc/ipython_notebooks_src/dev-cvode-nsteps-only.ipynb
+++ b/doc/ipython_notebooks_src/dev-cvode-nsteps-only.ipynb
@@ -44,23 +44,121 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 29
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:36] INFO: Finmag logging output will be appended to file: '/home/fangohr/.finmag/global.log'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:36] DEBUG: Building modules in 'native'...\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:               Finmag: 2510:dd07fba4c56706d7ae96c467c6662b7adfd47bfc\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:               Dolfin: 1.0.0\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:           Matplotlib: 1.2.0\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:                Numpy: 1.6.1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:                Scipy: 0.9.0\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:              IPython: 0.13.1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:               Python: 2.7.3\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:             Sundials: 2.4.0-5\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:         Boost-Python: 1.46.1\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "[2012-12-19 09:25:37] DEBUG:                Linux: Ubuntu 12.04.1 LTS\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# new function that does the time integration for max_steps only\n",
-      "def my_advance_time(integrator, tout, yout, max_steps):\n",
+      "def advance_time(integrator, tout, yout, max_steps=None):\n",
       "    integrator.set_max_num_steps(max_steps)\n",
-      "    \"\"\"Given the integrator object, a target time tout, and a state vector yout,\n",
-      "    this function integrates towards tout. If the number of maximum steps is \n",
-      "    reached, it will interrupt the calculation and return False.\n",
+      "    \"\"\"\n",
+      "    *Arguments*\n",
+      "\n",
+      "      ``tout`` - target time (float)\n",
+      "\n",
+      "      ``yout`` - state vector (numpy array)\n",
+      "\n",
+      "      ``max_steps`` - maximum number of steps (integer)\n",
+      "    \n",
+      "    Given the integrator object, a target time tout, and a state vector yout,\n",
+      "    this function integrates towards tout. If max_steps is given and the \n",
+      "    number of more than max_steps steps for the integration are reached, \n",
+      "    we interrupt the calculation and return False.\n",
       "\n",
       "    If tout is reached within the number of allowed steps, it will return True.\n",
       "    \"\"\"\n",
       "    \n",
+      "    if max_steps != None:\n",
+      "        integrator.set_max_num_steps(1)\n",
+      "        \n",
       "    reached_tout = True\n",
       "    tout_actual = tout\n",
       "    try:\n",
@@ -81,18 +179,27 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "yout = np.zeros(1)\n",
-      "ts = np.linspace(0.1, 1, 10)*0.1\n",
-      "integrator.init(rhs, 0, np.array([1.]))\n",
-      "integrator.set_scalar_tolerances(1e-9, 1e-9)\n",
+      "def test_advance_time_nsteps():\n",
+      "    import numpy as np\n",
+      "    from finmag.util.ode import cvode\n",
+      "    import finmag.native.sundials as sundials\n",
+      "    integrator = sundials.cvode(sundials.CV_ADAMS, sundials.CV_FUNCTIONAL)\n",
+      "    def rhs(t, y, ydot):\n",
+      "            ydot[:] = 0.5 * y\n",
+      "            return 0\n",
+      "\n",
+      "    yout = np.zeros(1)\n",
+      "    ts = np.linspace(0.1, 1, 10)*0.1\n",
+      "    integrator.init(rhs, 0, np.array([1.]))\n",
+      "    integrator.set_scalar_tolerances(1e-9, 1e-9)\n",
       "for i, t in enumerate(ts):\n",
-      "    retval, tout_actual = my_advance_time(integrator, t, yout, 2)\n",
+      "    retval, tout_actual = advance_time(integrator, t, yout, 2)\n",
       "    #assert retval == 0.0\n",
       "    print(\"t={:6.4}, yout = {:14}\".format(t,yout)),\n",
       "    print(\"current_time = {:15.10}\".format(integrator.get_current_time())),\n",
@@ -126,7 +233,7 @@
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
