Introduced several sections for notebooks at the end of manual: -tut* for tutorials (for users) -ref* for reference (for users) -dev* for notes (for developers) -oth* for other (not yet categorised to the first three)
We still need to tidy up some of these files, improve titles, order of files etc.

--- a/doc/ipython_notebooks_src/ref-domain-wall-energy-class.ipynb
+++ b/doc/ipython_notebooks_src/ref-domain-wall-energy-class.ipynb
@@ -1,12 +1,19 @@
 {
  "metadata": {
-  "name": "dw-energy-fixed"
+  "name": "ref-domain-wall-energy-class"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Domain wall energy class"
+     ]
+    },
     {
      "cell_type": "markdown",
      "metadata": {},
