Fix typo in tutorial notebook.

--- a/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
+++ b/doc/ipython_notebooks_src/tutorial-saving-averages-demo.ipynb
@@ -709,14 +709,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The ``Reader`` object has an extra ``read()`` method which reads the file again. This can be used if the data has changed:\n"
+      "The ``Reader`` object has an extra ``reload()`` method which reads the file again. This can be used if the data has changed:\n"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lastt = data['time'][-1] #last saved time in file\n",
+      "lastt = data['time'][-1]  # last saved time in file\n",
       "print(lastt)"
      ],
      "language": "python",
